fix for sProtostar select overflow on browser resizing

--- a/templates/protostar/less/template.less
+++ b/templates/protostar/less/template.less
@@ -644,3 +644,9 @@ body.modal-open {
 #finder-search .in.collapse {
 	overflow: visible;
 }
+
+/* Fix for select element overflow on browser resizing */
+select {
+	width: 100% !important;
+}
+
